fix: calc for gap cards

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ p, span {
 
 .btn {
     border-radius: 20px;
+    display: inline-block;
 }
 
 .btn-small {
@@ -118,11 +119,11 @@ p, span {
 }
 
 .pd-section {
-    padding: 4em 0;
+    padding: 4rem 0;
 }
 
 .pd-text {
-    padding: 1.4em 0;
+    padding: 1.4rem 0;
 }
 
 .text-center {
@@ -218,11 +219,11 @@ header nav {
     }
     
     .blue-card .card {
-        width: calc(100% / 3 - var(--gap-flex) * 2);
+        width: calc(100% / 3 - var(--gap-flex) *2 / 3);
     }
 
     .blue-card .big-card {
-        width: calc(100% / 3 * 2 - var(--gap-flex));
+        width: calc(100% / 3 * 2 - var(--gap-flex) / 2);
 
     }
 
@@ -338,11 +339,16 @@ header nav {
 
 /* benefits */
 
+.benefits .numbers {
+    display: inline-block;
+    font-size: 4rem;
+}
+
 @media screen and (min-width: 768px) {
 
 
     .benefits .card {
-        width: calc(100% / 2 - var(--gap-flex) )
+        width: calc(100% / 2 - var(--gap-flex) / 2)
     }
 
     .benefits .flex {
@@ -354,7 +360,7 @@ header nav {
 @media screen and (min-width: 992px) {
 
     .benefits .card {
-        width: calc(100% / 3 - var(--gap-flex) * 2)
+        width: calc(100% / 3 - var(--gap-flex) * 2 / 3)
     }
 
     .benefits .container {
